# zen-os

./: .clang-format  .gitignore  AGENTS.md  meson.build  meson_options.txt
.github/workflows/: ci.yml  qemu-test.yml
data/apparmor/: zenos-compositor  zenos-package-manager  zenos-privacy-guard  zenos-resource-manager  zenos-session  zenos-update-manager
data/branding/icons/: index.theme
data/browser/: policies.json  user.js  userChrome.css
data/dbus/: org.zenos.Compositor.xml  org.zenos.PackageManager.xml  org.zenos.PrivacyGuard.xml  org.zenos.ResourceManager.xml  org.zenos.UpdateManager.xml
data/nftables/: zenos-firewall.nft
data/ostree/: README.md
data/polkit/: 50-zenos.rules
data/systemd/: zenos-boot-check.service  zenos-compositor.service  zenos-headless.target  zenos-package-manager.service  zenos-privacy-guard.service  zenos-resource-manager.service  zenos-session@.service  zenos-update-manager.service
data/zram/: zenos-zram.conf
docs/: ALLOWED_DEPENDENCIES.md  CHANGELOG.md  CONTRIBUTING.md  ROADMAP.md
docs/architecture/: README.md
reports/: gate-p1v01.json  gate-p1v02.json  gate-p1v03.json  gate-p1v04.json  quality-gate-report.md
src/common/: meson.build
src/common/include/zen/: dbus-errors.h  dbus-helpers.h  models.h
src/common/src/: dbus-errors.c  dbus-helpers.c  models.c
src/compositor/: meson.build
src/compositor/include/zen/: cairo_buffer.h  compositor.h  dbus.h  input.h  keybinds.h  layer.h  lock.h  wallpaper.h  xdg.h  xwayland.h
src/compositor/src/: cairo_buffer.c  dbus.c  input.c  keybinds.c  layer.c  lock.c  main.c  wallpaper.c  xdg.c  xwayland.c
src/daemons/package-manager/: meson.build
src/daemons/package-manager/include/zen/: package-manager.h
src/daemons/package-manager/src/: package-manager.c
src/daemons/privacy-guard/: meson.build
src/daemons/privacy-guard/include/zen/: privacy-guard.h
src/daemons/privacy-guard/src/: privacy-guard.c
src/daemons/resource-manager/: meson.build
src/daemons/resource-manager/include/zen/: resource-manager.h
src/daemons/resource-manager/src/: resource-manager.c
src/daemons/update-manager/: meson.build
src/daemons/update-manager/include/zen/: update-manager.h
src/daemons/update-manager/src/: update-manager.c
src/installer/: meson.build
src/installer/include/zen/: installer.h
src/installer/src/: installer.c
src/oobe/: meson.build
src/oobe/include/zen/: oobe.h
src/oobe/src/: oobe.c
src/session/: meson.build
src/session/include/zen/: session.h
src/session/src/: session.c
src/shell/: meson.build
src/shell/include/zen/: app-launcher.h  notifications.h  quick-settings.h  shelf.h  shell.h
src/shell/src/: app-launcher.c  notifications.c  quick-settings.c  shelf.c  shell.c
subprojects/: scenefx.wrap  wayland.wrap  wlroots.wrap
tests/: lsan.supp  run-in-wsl.ps1
tests/include/: zen_pbt.h
tests/integration/: meson.build  test_asan_lifecycle.sh  test_crash_isolation.sh  test_dbus.c  test_multi_monitor.sh
tests/scenefx-renderer/: test_renderer_assertion.sh  test_renderer_preservation.sh
tests/unit/: meson.build  test_dbus_errors.c  test_host_checks.sh  test_orchestration_logic.sh  test_report_generator.sh
tests/unit/compositor/: meson.build  test_cairo_buffer.c  test_dbus.c  test_input.c  test_keybinds.c  test_layer.c  test_lock.c  test_multi_monitor.c  test_wallpaper.c  test_xdg.c
tests/unit/session/: meson.build  test_session.c
tools/: check-chardev.sh  check-image-binary.sh  debug-guest-agent.sh  inspect-image.sh  update-image-native.sh  update-test-image.sh  verify-quality-gates.sh
tools/image-builder/: build-test-image.sh
tools/zen-test/: Cargo.toml  DESIGN.md  USAGE_GUIDE.md  zen-test Implementation Plan.md
tools/zen-test-cli/: Makefile  README.md  zen-test-cli
tools/zen-test-cli/lib/: boot.sh  config.sh  qmp.sh  scenarios.sh  vm.sh
tools/zen-test/gates/common/: boot-baseline.toml
tools/zen-test/gates/phase1/: 1.1-boot-signal.toml  1.10-dbus.toml  1.11-session-manager.toml  1.12-screen-lock.toml  1.13-multi-monitor.toml  1.14-xwayland.toml  1.15-asan.toml  1.2-surface-protocols.toml  1.3-xdg-shell.toml  1.4-input-routing.toml  1.5-crash-isolation.toml  1.6-cairo-rendering.toml  1.7-wallpaper.toml  1.8-keybindings.toml  1.9-layer-shell.toml
tools/zen-test/gates/phase2/: 2.1-shelf-basic.toml  2.2-shelf-pinned-apps.toml
tools/zen-test/gates/scenefx/: renderer-fix.toml
tools/zen-test/guest-agent/: zen-test-agent  zen-test-agent.service
tools/zen-test/src/: agent.rs  ci.rs  errors.rs  image.rs  main.rs  output.rs  screenshot.rs  timeout.rs
tools/zen-test/src/gate/: definition.rs  mod.rs  report.rs  runner.rs
tools/zen-test/src/qmp/: client.rs  commands.rs  mod.rs
tools/zen-test/src/serial/: mod.rs  patterns.rs  scan.rs  tail.rs
tools/zen-test/src/vm/: config.rs  lifecycle.rs  mod.rs  qemu.rs
