[package]
name = "zen-test"
version = "0.1.0"
edition = "2021"
description = "Non-interactive QEMU VM testing infrastructure for Zen OS"
license = "MIT"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tokio = { version = "1", features = ["full"] }
nix = { version = "0.29", features = ["process", "signal"] }
regex = "1"
chrono = "0.4"
thiserror = "2"

[profile.release]
opt-level = 2
strip = true
